--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "element-ui": "^1.2.3",
+    "flex.css": "^1.1.6",
+    "font-awesome": "^4.7.0",
     "vue": "^2.2.1",
     "vue-router": "^2.2.0"
   },
